// Copyright Â© 2018 The Things Network Foundation, distributed under the MIT license (see LICENSE file)

syntax = "proto3";

import "github.com/TheThingsNetwork/ttn/api/end_device.proto";
import "github.com/TheThingsNetwork/ttn/api/identifiers.proto";
import "github.com/TheThingsNetwork/ttn/api/lorawan.proto";
import "github.com/TheThingsNetwork/ttn/api/messages.proto";
import "github.com/TheThingsNetwork/ttn/api/metadata.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package ttn.v3;

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

message ProcessUplinkMessageRequest {
  EndDeviceModel device_model = 1 [(gogoproto.nullable) = false];
  UplinkMessage message = 2 [(gogoproto.nullable) = false];
  string parameter = 3;
}

message ProcessDownlinkMessageRequest {
  EndDeviceModel device_model = 1 [(gogoproto.nullable) = false];
  DownlinkMessage message = 2 [(gogoproto.nullable) = false];
  string parameter = 3;
}

// The UplinkMessageProcessor service processes uplink messages.
service UplinkMessageProcessor {
  rpc Process(ProcessUplinkMessageRequest) returns (UplinkMessage);
}

// The DownlinkMessageProcessor service processes downlink messages.
service DownlinkMessageProcessor {
  rpc Process(ProcessDownlinkMessageRequest) returns (DownlinkMessage);
}
